# ray-box-voxel-renderer

./: CMakeLists.txt  CMakePresets.json  readme.md
resources/blocks/: dirt.json  grass.json  stone.json
resources/shaders/: chunk.frag.glsl  chunk.vert.glsl
src/: app.cpp  app.hpp  cam.cpp  cam.hpp  main.cpp  uniform_buffer.hpp
src/gfx/: cam.cpp  chunk_renderer.cpp  chunk_renderer.hpp  shader.cpp  shader.hpp  shared_buffer.cpp  shared_buffer.hpp
src/utils/: custom_hash.hpp  utils.cpp  utils.hpp
src/world/: block_type.cpp  block_type.hpp  chunk.cpp  chunk.hpp  world.cpp  world.hpp
